Started filling out cover page - need to fill out collage

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </header>
             <div id="outer-div">
                 <div id="telephone-messaging-vertical">
-                    <div id="telephone" class="text-block scrollable">
+                    <div id="telephone" class="text-block clippable">
                         <p> The best way to call me is unfortunately not via my phone number because there is an issue with my voicemail carrier for calls at the moment.
                             However, should calling be necessary, my mobile phone number is <a href="tel:+06176534628" class="bold link">617&dash;653&dash;4628</a>.</p> <!-- Telephone link href sourced from: https://www.w3docs.com/snippets/html/how-to-add-telephone-links-with-html.html -->
 
@@ -40,7 +40,7 @@
 
                         <p> Any pertinent information not in this block for speaking to me is in the right side table on this page. Feel free to reach out to me with any questions or concerns!</p>
                     </div>
-                    <div id="messaging" class="text-block scrollable">
+                    <div id="messaging" class="text-block clippable">
                         <p> While speaking over the phone or via VoIP is great, I do not generally prefer communicating this way; my availability over text is much larger 
                             because I can quickly respond to questions or concerns.</p>
 
@@ -133,7 +133,7 @@
                             <a href="mission.html" target="_self"><p>What I Stand For</p></a>
                         </nav>
                         <p class="hidden" id="#start-content">Content After Navigation Bar</p>
-                        <div id="availability-container" class="scrollable">
+                        <div id="availability-container" class="clippable">
                             <p>Feel free to send me a message any time! If it is necessary to speak with me, this is my current general availability:</p>
                             <ul id="availability-list"> <!-- Whitespace character references from https://stackoverflow.com/questions/8515365/are-there-other-whitespace-codes-like-nbsp-for-half-spaces-em-spaces-en-space -->
                                 <li>Sunday:&emsp;&emsp;&ensp;&nbsp;Unavailable</li>
