--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width height=device-height">
         <script src="scripts/modernizr.custom.62074.js"></script>
         <link href="styles/general_styles.css" rel="stylesheet">
-        <link href="styles/main_styles.css" rel="stylesheet">
+        <link href="styles/index_styles.css" rel="stylesheet">
         <link href="styles/links_styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bitter" rel="stylesheet">
         <link rel="shortcut icon" href="resources/images/icons/html5-icon.png">
@@ -24,19 +24,51 @@
                     <h1>Ryan Smaller - IT B.S.</h1>
                 </header>
                 <div id="body-div">
-                    <div id="misc-images" class="scrollable">
-                        <p>Misc Images Here</p>
+                    <div id="my-story" class="clippable">
+                        <h4>My Story</h4>
+                        <p> My journey as an IT student started when I was roughly 8 years old. I had an ancient Toshiba laptop running <span class="italic">Windows Vista SP1</span>,
+                            if anyone remembers that mess of an operating system. So, my first experience installing software and tinkering with the various menus and buttons Windows 
+                            machines have was largely extended. I might have tried playing a game like Minecraft on my computer, and there would be issues with the installation.
+                            As frustrating as that was, I learned how to retrace my steps and understand where things went wrong.
+                        </p>
+                        <p> From that point onward, my passion for computing silently grew. In middle school, I would sometimes take apart different pieces of hardware I had laying 
+                            around to see how they worked. These pieces of hardware would often be things like electronic toys, broken hard disks, old laptops and desktops, and so on.
+                        </p>
+                        <p> High school is where my passion truly blossomed. I went to a vocational school called <a class="link" href="https://www.bluehills.org/" target="_blank">Blue Hills Regional Technical School</a>. 
+                            The fun began when I got into the <a href="https://www.bluehills.org/tech-programs/computer-information-systems" target="_blank" class="link">Computer Information Systems</a> vocation. 
+                            I learned all the different components and connectors on a computer.
+                        </p>
+                        <p> My next journey was computer networking. I created complex simulated Cisco network environments in <a target="_blank" href="https://www.netacad.com/cisco-packet-tracer" class="link">Packet Tracer</a>, 
+                            and I competed in a <a href="https://www.skillsusa.org/competitions/skillsusa-championships/categories-and-descriptions/" class="link" target="_blank">SkillsUSA</a> event about 
+                            Cisco networking. One of the concepts that has stuck with me over time is subnetting, the process of dividing networks into smaller networks to suit the needs
+                            of an organization. It involves a lot of binary math, so it might be confusing to anyone unfamiliar with binary, but it is something I am very passionate about.
+                        </p>
+                        <p> I then learned about virtual machines and the UNIX/Linux command line. I use bash on a day-to-day basis for my IT work, and I am extremely grateful to have
+                            been familiarized with it. Files can be created, modified, moved around, and removed with extreme precision and efficiency, and automated tasks can be performed
+                            quickly without having to navigate user-hostile graphical environments. 
+                        </p>
+                        <p> And finally, my most recent project has been software development. Combining what I know about subnetting, computer hardware, and command-line environments,
+                            I created something I am extremely proud of: command-line and graphical applications for calculating different subnets. For anyone curious, the source code for
+                            these applications can be found in my <a class="link" target="_self" href="portfolio.html">Portfolio</a>.
+                        </p>
                     </div>
                     <div id="greater-portrait-photo">
                         <div id="portrait-photo">
                             <img height="100%" src="resources/images/main/portrait-photo.jpg" alt="Portrait Photo">
                         </div>
                         <div id="about-nav">
-                            <div id="about-me" class="scrollable">
-                                <p>About Me Here</p>
+                            <div id="about-me" class="clippable">
+                                <h4>About Me</h4>
+                                <p> I am an Information Technology student at the University of Massachusetts Boston with a concentration in System Administration. My study is within the
+                                    College of Science and Mathematics.
+                                </p>
+                                <p> Over the years, I grew fond of anything relating to computing, whether that be hardware, software, programming, network infrastructure, 
+                                    engineering, or anything between.
+                                </p>
+                                <p> I do not plan on stopping there, though. I am eager to learn and continue my career in the path of IT and Computer Science!</p>
                             </div>
                             <p class="hidden"><a href="#start-content">Skip Navigation</a></p>
-                            <nav id="navbar">
+                            <nav id="navbar" class="clippable">
                                 <a href="portfolio.html" target="_self"><p>Portfolio</p></a>
                                 <a href="resume.html" target="_self"><p>Resume</p></a>
                                 <a href="mission.html" target="_self"><p>What I Stand For</p></a>
@@ -44,17 +76,16 @@
                             <p class="hidden" id="#start-content">Content After Navigation Bar</p>
                         </div>
                     </div>
-                    <div id="credentials" class="scrollable">
-                        <!-- <a href="https://www.comptia.org/certifications/a" class="link" target="_blank"><img src="resources/images/certifications/aplus-icon.svg" width="100" height="100"></a>
-                        <a href="https://w3.testout.com/pro-certifications/pc-pro" class="link" target="_blank"><img src="resources/images/certifications/testout-icon.png"></a>
-                        <a href="https://meta.extremenetworks.com/e_certifications/extreme-networks-sales-specialist/" class="link" target="_blank"><img src="resources/images/certifications/ess-icon.png"></a> -->
-                        <p class="hidden"></p>
-                        
+                    <div id="collage" class="clippable">
+                        <h4>Collage</h4>
+                        <img src="resources/images/collage/collage1.jpg" width="600" alt="Screenshot of Graphical Subnetter"> <!-- Unspecified height is intentional; collage will dynamically resize with viewport. -->
+                        <img src="resources/images/collage/collage2.jpg" width="270" alt="One of My Packet Tracer Projects">
+                        <img src="resources/images/collage/collage3.jpg" width="300" alt="Python Version Control Script I Used Before Git">
                     </div>
                 </div>
+                <footer>
+                    <a href="contact.html" class="link force-no-decoration" target="_self"><h1>Contact Me</h1></a>
+                </footer>
             </div>
-            <footer>
-                <a href="contact.html" class="link" target="_self"><h1>Contact Me</h1></a>
-            </footer>
     </body>
 </html>
