--- a/mission.html
+++ b/mission.html
@@ -26,7 +26,7 @@
         <div id="outer-div">
             <div id="left-main-div">
                 <div id="left-top-div">
-                    <div id="ethical-bg" class="scrollable">
+                    <div id="ethical-bg" class="clippable">
                         <p> My ethical background is very diverse. There are a lot of different factors which affect my global perspective and work ethic.
                         </p>
                         <p> My IT career started when I was a curious high schooler, for example. There are lots of things a high schooler might be curious 
@@ -44,11 +44,11 @@
                         </p>
                     </div>
                     <div id="portrait">
-                        <iframe class="scrollable" width="588" height="331" src="https://www.youtube.com/embed/nu9xL0-F7wA?si=Y7bYw3C0Bvzr9S2O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe class="clippable" width="588" height="331" src="https://www.youtube.com/embed/nu9xL0-F7wA?si=Y7bYw3C0Bvzr9S2O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p>Bad things happen when ethical guidelines are not followed. In the above video, StackOverflow did unethical things with their users' data.</p>
                     </div>
                 </div>
-                <div id="beliefs" class="scrollable">
+                <div id="beliefs" class="clippable">
                     <p> My work ethic and my moral compass are somewhat nuanced, so I wanted to dedicate this section to that specifically. Firstly, I believe 
                         there are many different ways to solve a problem. For example, one way to set up an IP addressing scheme is to configure a DHCP, or 
                         Dynamic Host Configuration Protocol, server. Another way to do the same thing is to set up static addressing on a network. It is very 
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="right-main-div">
-                <div id="acm-code" class="scrollable">
+                <div id="acm-code" class="clippable">
                     <p> One page which I use as reference for any ethical questions or concerns I might have is the <a>Association of Computing and Machinery Code of Ethics</a>.
                         Below is a list of their general guidelines which I find important:    
                     </p>
@@ -105,7 +105,7 @@
                         </a>
                     </ol>
                 </div>
-                <div id="sysadmin-book" class="scrollable">
+                <div id="sysadmin-book" class="clippable">
                     <p> Another ethical reference I have at my disposal is a book I adore &mdash; 
                         <a class="link" href="https://the-sysadmin-book.com/" target="_blank"><span class="italic">The Practice of System and Network Administration</span> &ndash; Third Edition</a> 
                         by Thomas Limoncelli, Christina Hoagan, and Strata Chalup. This book has a lot of different sections on handling different situations effectively, like 
