--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         <div id="outer-div">
             <div class="vertical-div">
                 <div class="portfolio-unit" id="subnettergui">
-                    <p class="portfolio-name-header">
+                    <p class="clippable portfolio-name-header">
                         <a href="https://isocpp.org/" class="link force-no-decoration" target="_blank">
                             <img class="inlined-image-container" src="resources/images/logos/cpp-logo.png" width="20" height="23" alt="C Plus Plus Icon">
                         </a> Graphical Subnetter &#40;SubnetterGui&#41;
@@ -36,7 +36,7 @@
                     <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnettergui" class="link">Access SubnetterGui.</a></p>
                 </div>
                 <div class="portfolio-unit" id="hashlet">
-                    <p class="portfolio-name-header">
+                    <p class="clippable portfolio-name-header">
                         <a href="https://www.python.org/about/" class="link force-no-decoration" target="_blank">
                             <img class="inlined-image-container" src="resources/images/logos/python-logo.png" width="20" height="20" alt="Python Icon">
                         </a> Text and File Hashing Tool &#40;Hashlet&#41;
@@ -48,7 +48,7 @@
             </div>
             <div class="vertical-div">
                 <div class="portfolio-unit" id="subnetter">
-                    <p class="portfolio-name-header">
+                    <p class="clippable portfolio-name-header">
                         <a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" class="link force-no-decoration" target="_blank">
                         <img class="inlined-image-container" src="resources/images/logos/c-logo.png" width="20" height="23" alt="C Icon">
                         </a> CLI Subnetter &#40;Subnetter&#41;
@@ -58,7 +58,7 @@
                     <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnetter" class="link">Access Subnetter.</a></p>
                 </div>
                 <div class="portfolio-unit" id="cryptik">
-                    <p  class="portfolio-name-header">
+                    <p  class="clippable portfolio-name-header">
                         <a href="https://www.python.org/about/" class="link force-no-decoration" target="_blank">
                             <img class="inlined-image-container" src="resources/images/logos/python-logo.png" width="20" height="20" alt="Python Icon">
                         </a> Vigen&#232;re Ciphering Tool &#40;Cryptik&#41;
@@ -70,7 +70,7 @@
             </div>
             <div class="vertical-div">
                 <div class="portfolio-unit" id="subnetterplusplus">
-                    <p class="portfolio-name-header">
+                    <p class="clippable portfolio-name-header">
                         <a href="https://isocpp.org/" class="link force-no-decoration" target="_blank">
                             <img class="inlined-image-container" src="resources/images/logos/cpp-logo.png" width="20" height="23" alt="C Plus Plus Icon">
                         </a> CLI Subnetter &#40;Subnetter++&#41;
