--- a/resume.html
+++ b/resume.html
@@ -22,8 +22,8 @@
         <p class="hidden" id="#start-content">Beginning of Content</p>
         <div id="outer-div">
             <div id="left-div">
-                <div id="other-links">
-                    <p>Links for Futher Reading</p>
+                <div id="other-links" class="clippable">
+                    <h4>Links for Futher Reading</h4>
                     <p>Professional Experience</p>
                     <ul>
                         <li><a href="https://www.beacontelecom.com/about-us/careers/" target="_blank" class="link">Beacon Telecom &ndash; Telecom Technician</a></li>
@@ -42,13 +42,11 @@
                     <p>Extracurricular</p>
                     <ul>
                         <li><a href="https://www.uscyberpatriot.org/" target="_blank" class="link">CyberPatriot</a></li>
-                        <li><a href="https://www.skillsusa.org/" target="_blank" class="link">SkillsUSA</a></li>
+                        <li><a href="https://www.skillsusa.org/competitions/skillsusa-championships/categories-and-descriptions/" target="_blank" class="link">SkillsUSA</a></li>
                     </ul>
                 </div>
-                <!-- <div id="references">
-                    <p>References</p>
-                </div> -->
-                <div id="certifications">
+                <div id="certifications" class="clippable">
+                    <h4>Certifications</h4>
                     <a href="https://www.comptia.org/certifications/a" class="link" target="_blank"><img src="resources/images/certifications/aplus-icon.svg" width="100" height="100"></a>
                     <a href="https://meta.extremenetworks.com/e_certifications/extreme-networks-sales-specialist/" class="link" target="_blank"><img src="resources/images/certifications/ess-icon.png"></a>    
                     <a href="https://w3.testout.com/pro-certifications/pc-pro" class="link" target="_blank"><img src="resources/images/certifications/testout-icon.png"></a>
@@ -58,7 +56,7 @@
                 <embed src="resources/downloadables/rsmaller-resume.pdf"> <!-- Embed element cited from https://stackoverflow.com/questions/17784037/how-to-display-pdf-file-in-html -->
             </div>
             <div id="right-div">
-                <div id="comments">
+                <div id="comments" class="clippable">
                     <p> I am fortunate to have to many different experiences in high school and college under my belt.</p>
                     <p> In high school, I learned computer hardware, Cisco IOS networking, computer repair, some Linux configurations, and so much more.</p>
                     <p> College allowed me to build on that. I took more classes about Linux and system administration. At the same time, I took two Python 
@@ -119,7 +117,7 @@
                     </table>
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p>
-                <nav id="navbar">
+                <nav id="navbar" class="clippable">
                     <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
                     <a href="portfolio.html" target="_self"><p>Portfolio</p></a>
                     <a href="mission.html" target="_self"><p>What I Stand For</p></a>
