Updated cover page with collage

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
                     <div id="collage" class="clippable">
                         <h4>Collage</h4>
                         <img src="resources/images/collage/collage1.jpg" width="600" alt="Screenshot of Graphical Subnetter"> <!-- Unspecified height is intentional; collage will dynamically resize with viewport. -->
-                        <img src="resources/images/collage/collage2.jpg" width="270" alt="One of My Packet Tracer Projects">
+                        <img src="resources/images/collage/collage2.jpg" width="300" alt="One of My Packet Tracer Projects">
                         <img src="resources/images/collage/collage3.jpg" width="300" alt="Python Version Control Script I Used Before Git">
+                        <img src="resources/images/collage/collage4.jpg" width="310" alt="My Current Linux Desktop Configuration">
+                        <img src="resources/images/collage/collage5.jpg" width="290" alt="An Ubuntu Virtual Machine I Customized">
                     </div>
                 </div>
                 <footer>
