--- a/mission.html
+++ b/mission.html
@@ -43,7 +43,7 @@
                             out by causing severe damage to IT infrastructure. In short, it is imperative to me that I show I am trustworthy.
                         </p>
                     </div>
-                    <div id="portrait">
+                    <div id="portrait" class="clippable">
                         <iframe class="clippable" width="588" height="331" src="https://www.youtube.com/embed/nu9xL0-F7wA?si=Y7bYw3C0Bvzr9S2O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p>Bad things happen when ethical guidelines are not followed. In the above video, StackOverflow did unethical things with their users' data.</p>
                     </div>
@@ -117,7 +117,7 @@
                         information on the practice of IT and even more so for system administration.</p>
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p>
-                <nav id="navbar">
+                <nav id="navbar" class="clippable">
                     <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
                     <a href="portfolio.html" target="_self"><p>Portfolio</p></a>
                     <a href="resume.html" target="_self"><p>Resume</p></a>
