--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                     </p>
                     <div class="portfolio-image-container" id="subnettergui-image-container"></div> <!-- All portfolio images are 587x320, the max resolution they should appear in 1080p fullscreen. -->
                     <p class="clippable">A graphical subnetting calculator and studying tool for IT students who want to learn about subnetting, classful addressing, or IPv6.</p>
-                    <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnettergui" class="link">Access SubnetterGui.</a></p>
+                    <a target="_blank" href="https://github.com/rsmaller/subnettergui" class="link clippable"><p class="portfolio-link">Access SubnetterGui.</p></a>
                 </div>
                 <div class="portfolio-unit" id="hashlet">
                     <p class="clippable portfolio-name-header">
@@ -43,7 +43,7 @@
                     </p>
                     <div class="portfolio-image-container" id="hashlet-image-container"></div>
                     <p class="clippable">A CLI script for generating pseudo-hashes or pseudo-checksums for demonstration purposes.</p>
-                    <p class="portfolio-link"><a target="_blank" href="resources/downloadables/hashlet.py" class="link" download>Access Hashlet.</a></p> <!-- Download link attribute cited from www.w3schools.com/howto/howto_html_download_link.asp -->
+                    <a target="_blank" href="resources/downloadables/hashlet.py" class="link clippable" download><p class="portfolio-link">Access Hashlet.</p></a> <!-- Download link attribute cited from www.w3schools.com/howto/howto_html_download_link.asp -->
                 </div>
             </div>
             <div class="vertical-div">
@@ -55,7 +55,7 @@
                     </p>
                     <div class="portfolio-image-container" id="subnetter-image-container"></div>
                     <p class="clippable">A CLI-based subnet calculator written in C.</p>
-                    <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnetter" class="link">Access Subnetter.</a></p>
+                    <a target="_blank" href="https://github.com/rsmaller/subnetter" class="link clippable"><p class="portfolio-link">Access Subnetter.</p></a>
                 </div>
                 <div class="portfolio-unit" id="cryptik">
                     <p  class="clippable portfolio-name-header">
@@ -65,7 +65,7 @@
                     </p>
                     <div class="portfolio-image-container" id="cryptik-image-container"></div>
                     <p class="clippable">A CLI script for encoding and decoding Vigen&#232;re-ciphered text with a key.</p>
-                    <p class="portfolio-link"><a target="_blank" href="resources/downloadables/cryptik.py" class="link" download>Access Cryptik.</a></p>
+                    <a target="_blank" href="resources/downloadables/cryptik.py" class="link clippable" download><p class="portfolio-link">Access Cryptik.</p></a>
                 </div>
             </div>
             <div class="vertical-div">
@@ -77,10 +77,10 @@
                     </p>
                     <div class="portfolio-image-container" id="subnetterplusplus-image-container"></div>
                     <p class="clippable">A more robust version of the C CLI-based subnet calculator, re-written in C++.</p>
-                    <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnetterplusplus" class="link">Access Subnetter++.</a></p>
+                    <a target="_blank" href="https://github.com/rsmaller/subnetterplusplus" class="link clippable"><p class="portfolio-link">Access Subnetter++.</p></a>
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p>
-                <nav id="navbar">
+                <nav id="navbar"  class="clippable">
                     <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
                     <a href="resume.html" target="_self"><p>Resume</p></a>
                     <a href="mission.html" target="_self"><p>What I Stand For</p></a>
