Gave collage a background of its own

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div id="collage" class="clippable">
-                        <h4>Collage</h4>
+                        <h4 class="white">Collage</h4>
                         <img src="resources/images/collage/collage1.jpg" width="600" alt="Screenshot of Graphical Subnetter"> <!-- Unspecified height is intentional; collage will dynamically resize with viewport. -->
                         <img src="resources/images/collage/collage2.jpg" width="300" alt="One of My Packet Tracer Projects">
                         <img src="resources/images/collage/collage3.jpg" width="300" alt="Python Version Control Script I Used Before Git">
