Fixed clipping bugs in HTML when viewport is maxed out

--- a/mission.html
+++ b/mission.html
@@ -48,7 +48,7 @@
                         <p>Bad things happen when ethical guidelines are not followed. In the above video, StackOverflow did unethical things with their users' data.</p>
                     </div>
                 </div>
-                <div id="beliefs" class="clippable">
+                <div id="beliefs" class="scrollable">
                     <p> My work ethic and my moral compass are somewhat nuanced, so I wanted to dedicate this section to that specifically. Firstly, I believe 
                         there are many different ways to solve a problem. For example, one way to set up an IP addressing scheme is to configure a DHCP, or 
                         Dynamic Host Configuration Protocol, server. Another way to do the same thing is to set up static addressing on a network. It is very 
